--- a/estilos/style.css
+++ b/estilos/style.css
@@ -13,7 +13,7 @@
 }
 
 body, html{
-    background-color:#5f2c82;
+    background-image: linear-gradient(to top, #9247c5, #60dfda  ) ;
     height: 100vh;
     width: 100vw;
 }
