--- a/estilos/MQ.css
+++ b/estilos/MQ.css
@@ -28,13 +28,19 @@
         width:950px;
     }
     section#login>div#imagem{
-        float: left;
-        width:50%;
+        float: right;
+        width:40%;
         height: 100%;
- }
- section#login > div#form{
-    float: right;
+    }
+    section#login > div#form{
+    float: left;
     width: 50%;
-}
-
+    }
+    div#form > h1{
+        text-align: center;
+        margin-bottom: 2em;
+    }
+    div#form > p{
+    font-size: 1.2em;
+    }
 }
