--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,7 +29,7 @@ section#login{
     transform:translate(-50%, -50%);
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.418);
@@ -40,7 +40,7 @@ section#login{
 
 section#login > div#imagem{
     display: block;
-    background: #5f2c82 url(../imagens/pexels-thisisengineering-3861976.jpg) no-repeat;
+    background: #602c8291 url(../imagens/pexels-thisisengineering-3861976.jpg) no-repeat;
     background-size: cover;
     height: 200px;
 
@@ -58,4 +58,54 @@ div#form > h1{
 }
 div#form > p{
     font-size: 0.8em;
+}
+
+.campo{
+    background-color: #c078f0;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+    
+}
+
+.campo>label{
+    display: none;
+}
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    border: none;
+    background-color: #60dfdb80;
+    
+}
+form > input[type=submit]:hover{
+    background-color: #60dfdbe1 ;
+    cursor: pointer;
+}
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color:  #ffffffc9;
+    color: black;
+    border: 1px solid #60dfda;
+    border-radius: 5px;
+    text-decoration: none;
+}
+form > a.botao:hover{
+    background-color: #60dfda;
+}
+
+form > a.botao>i{
+    font-size: 0.8em;
+
 }
