--- a/estilos/style.css
+++ b/estilos/style.css
@@ -26,7 +26,6 @@ main{
 section#login{
     position: absolute;
     top:50%; left:50%;
-    transform:translate(-50%, -50%);
     background-color: white;
     width: 250px;
     height: 515px;
@@ -35,6 +34,7 @@ section#login{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.418);
     transition:.1s;
     transition-timing-function: ease;
+    transform:translate(-50%, -50%);
 
 }
 
@@ -58,21 +58,41 @@ div#form > h1{
 }
 div#form > p{
     font-size: 0.8em;
+    text-align: center;
+  
 }
 
 .campo{
     background-color: #c078f0;
+    border: solid #c078f0;
     display: block;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
     
+}
+.campo > span{
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
 }
 
 .campo>label{
     display: none;
 }
+
+div.campo > input{
+    font-size: 1em; 
+    width: 80%;
+    height: 100%;
+    border: 0;
+    border-radius: 8px;
+    transform: translateY(-14px);
+
+}
+
 form > input[type=submit]{
     display: block;
     font-size: 1em;
@@ -95,7 +115,7 @@ form > a.botao{
     height: 40px;
     padding-top: 5px;
     margin-top: 5px;
-    background-color:  #ffffffc9;
+    background-color:#60dfdba6;
     color: black;
     border: 1px solid #60dfda;
     border-radius: 5px;
