--- a/estilos/MQ.css
+++ b/estilos/MQ.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 @media screen and ( min-width: 768px) and (max-width: 992px){  
-        body{ background-image: linear-gradient( to top, #49a09d, #5f2c82);
+        body{    background-image:linear-gradient(to top, #60dfdbe1, white);
 
 }
 
@@ -23,7 +23,7 @@
 
 @media screen and (min-width: 992px){
 
-    body{ background-image: linear-gradient( to top, #49a09d, #5f2c82);
+    body{ background-image:linear-gradient(to top, #60dfdbe1, white);
  }
     section#login{
         width:950px;
