--- a/estilos/style.css
+++ b/estilos/style.css
@@ -13,7 +13,7 @@
 }
 
 body, html{
-    background-image: linear-gradient(to top, #9247c5, #60dfda  ) ;
+    background-image:linear-gradient(to top, #60dfdbe1, white);
     height: 100vh;
     width: 100vw;
 }
@@ -63,8 +63,8 @@ div#form > p{
 }
 
 .campo{
-    background-color: #c078f0;
-    border: solid #c078f0;
+    background-color: #60dfdbe1  ;
+    border: solid rgba(0, 0, 0, 0);
     display: block;
     width: 100%;
     height: 40px;
